# Data-Pipeline-Streaming-conversation

./: .gitignore  README.md
.github/workflows/: chat-pipeline-ci.yml
chat_pipeline/: pyproject.toml
chat_pipeline/src/chat_stream_pipeline/: __init__.py  admin_pubsub.py  beam_pipeline.py  cli.py  config.py  constants.py  data_generator.py  health.py  logging_utils.py  models.py  publisher_cli.py  row_builders.py  schemas.py  transforms.py  validate.py
chat_pipeline/tests/: test_beam_pipeline.py  test_beam_transforms.py  test_config.py  test_data_generator.py  test_models.py  test_row_builders.py  test_validate.py
docs/: ARCHITECTURE.md
scripts/: common.sh  deploy.sh  health_check.sh  publish_sample.sh  run_pipeline.sh  teardown.sh  validate.sh
terraform/: .terraform.lock.hcl  apis.tf  bigquery.tf  create-view.sql  generate-the-data.py  iam.tf  locals.tf  main.tf  outputs.tf  pubsub_dead_letter_sub.tf  pubsub_pipeline_errors.tf  requirements.txt  send-data-to-pubsub.py  streaming-beam-dataflow.py  terraform.tfvars.example  test_validate_dataset_shapes.py  topic-subscription.py  validate_dataset_shapes.py  variables.tf
